HBase & Scala Day02